Fade out overlay scrollbar after page load

This issue is caused by Aura Overlay Scrollbar is created with
opacity>0. We
used to call SAC::DidScrollUpdate - LTI::UpdateScrollbars to fade out
when RegisterScrollLayer.

```
#2 0x7f23d0dfe1ea cc::LayerTreeImpl::UpdateScrollbars()
#3 0x7f23d0dfd999 cc::LayerTreeImpl::DidUpdateScrollState()
#4 0x7f23d0e07231 cc::LayerTreeImpl::RegisterScrollLayer()
```

But we remove ScrollbarAnimationController::DidScrollUpdate call in
UpdateScrollbars at
https://crrev.com/71b8b24a21686187f1655030e7328daa12921a24 [formerly 697a467f819ce09da5209a3df13b8b92f33e35a4].
Then Overlay Scrollbar can not fade out until we have real scroll.

In this patch, we apply set_needs_show_scrollbars(true) to the layer in
LayerTreeImpl::RegisterScrollLayer that will let
LTI::HandleScrollbarShowRequestsFromMain pickup and call
SAC::DidScrollUpdate.

For cc_unittest, remove set_needs_show_scrollbars call in
LayerTreeHostImplTestScrollbarAnimation.* and
LayerTreeHostImplTest.ScrollbarVisibilityChangeCausesRedrawAndCommit.

BUG=717222
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2858973002
Cr-Commit-Position: refs/heads/master@{#469425}

Former-commit-id: b14926c905396fbeb0a77bfc6cce569c8a35fa5f